# adversarial-multi-agent-lib

./: .commit-msg.txt  .dockerignore  .env.example  .gitignore  .marprc.yml  148  148)  185  657)  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  N-M-02  README.md  _KEYS  pyproject.toml  threshold
.claude/: settings.local.json
.github/workflows/: ci.yml  docs-freshness.yml
docs/: LESSONS_LEARNED.md  NEXT_SESSION.md  SECURITY_MODEL.md  architecture.md  build-plan.md  capacity-model.md  decisions.md  deployment-architecture.md  executive-brief.md  parole_slides.md  pc-design.md  production-readiness-gaps.md  research-executive-brief.md  research_slides.md  retail-executive-brief.md  retail-sweep-design.md  retail_slides.md  scenarios.md  semver-policy.md  slides.md
docs/linkedin/: 2026-05-17-durable-non-tech.md
docs/reviews/: 2026-07-18-holistic-implementation-review.md  2026-07-23-architecture-depth-review.md
docs/runbooks/: durable-backup-restore.md  durable-compliance.md  durable-integration.md  durable-operations.md  otel-operations.md
docs/security-audits/: 2026-05-12.md  2026-05-13-post-sweep-delta.md  2026-05-13-remediation.md  2026-05-13.md  2026-05-14-industrial-sweep.md  2026-05-14-pc-sweep.md  2026-05-16-durable-poc-sweep.md  2026-05-16-healthcare-sweep.md  2026-05-16-prod-postgres-plan-review.md  2026-05-17-cipher-gcp-kms-sweep.md  2026-05-17-prod-postgres-plan-review-v2.md  2026-07-23.md  (+10 more)
examples/: basic_review_loop.py  gemini_executor.py  manuscript_assurance.py  parole_assessment.py
examples/production/cipher_aws_kms/: .env.example  Dockerfile  README.md  cipher.py  daemon.py  dek_cache.py  docker-compose.yml  pyproject.toml  requirements.in
examples/production/cipher_aws_kms/scripts/: audit_iam_grants.sh  provision_cmk.sh  rotate_cmk_now.sh
examples/production/cipher_aws_kms/tests/: conftest.py  test_cipher.py  test_daemon_config.py  test_dek_cache.py  test_tenant_resolver.py
examples/production/cipher_gcp_kms/: .env.example  Dockerfile  README.md  cipher.py  daemon.py  dek_cache.py  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  smoke_test.py
examples/production/cipher_gcp_kms/scripts/: audit_iam_grants.sh  provision_keyring.sh  rotate_kms_key_version.sh
examples/production/cipher_gcp_kms/tests/: conftest.py  test_cipher.py  test_daemon_config.py  test_dek_cache.py  test_live_kms.py  test_tenant_resolver.py
examples/production/durable_postgres/: .env.example  Dockerfile  README.md  audit_sink.py  caller.py  cipher.py  conftest.py  daemon.py  docker-compose.yml  lock.py  postgresql.conf.snippet  pyproject.toml  quarantine.py  requirements.in  requirements.txt  schema.sql  smoke_test.py  store.py
examples/production/durable_postgres/.secrets/: .gitkeep
examples/production/durable_postgres/scripts/: .gitkeep  0002_add_integrity_tag.sql  0003_add_quarantine.sql  0004_add_tenant_id.sql  0005_enable_tenant_rls.sql  0006_tenant_id_not_null.sql  0007_force_tenant_rls.sql  0008_add_audit_log.sql  _migrate_helpers.py  _reseal_helpers.py  anchor_audit_chain.py  audit_deps.sh  backup.sh  check_no_fstring_sql.sh  check_set_local_pattern.py  generate_sbom.sh  list_quarantined.py  migrate_schema.py  recipients.txt  reconcile_audit.py  reencrypt_all.py  requeue.py  reseal_all_checkpoints.py  restore.sh  rotation_drill.py  setup_wal_archiving.sh  test_migrate_schema_smoke.py  test_reseal_smoke.py  verify_audit_chain.py  verify_integrity_sample.py  verify_multi_tenant.py
examples/production/durable_postgres/tests/: conftest.py  test_audit_sink.py  test_audit_sink_pg.py  test_cipher.py  test_daemon.py  test_daemon_construct_smoke.py  test_force_rls_present.py  test_grep_gate.py  test_integrity_tag_roundtrip.py  test_lock.py  test_quarantine.py  test_reencrypt.py  test_scheduler_hot_path.py  test_shared_tenant_env.py  test_store.py  test_tenant_isolation.py  test_tenant_resolver.py
reports/: load-test-2026-05-18.json  rotation-drill-2026-05-18-post-fix.json  rotation-drill-2026-05-18.json
scripts/: check_capacity_model_freshness.py  check_no_secrets.py  load_test.py
(+675 files in other folders)
