[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adv-multi-agent"
version = "0.1.0"
description = "Adversarial multi-agent research template based on the ARIS paper"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Giri Manchaiah", email = "gmanchaiah@gmail.com"}]
requires-python = ">=3.11"
keywords = ["llm", "agents", "research", "adversarial", "multi-agent", "anthropic", "aris"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40.0,<1.0",
    "openai>=1.30.0,<2.0",
    "pydantic>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
gemini = [
    "google-genai>=1.0,<2.0",
]
mcp = [
    "mcp>=1.0,<2.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.4,<1.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
adv-multi-agent-skills = "adv_multi_agent.core.skills.mcp_server:main"

[project.urls]
Homepage = "https://github.com/gmanchaiah/adv-multi-agent-products"
Source = "https://github.com/gmanchaiah/adv-multi-agent-products"
Issues = "https://github.com/gmanchaiah/adv-multi-agent-products/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"adv_multi_agent.research.skills" = ["templates/*.md"]
"adv_multi_agent.parole.skills" = ["templates/*.md"]
"adv_multi_agent.retail.skills" = ["templates/*.md"]
"adv_multi_agent.pc.skills" = ["templates/*.md"]
"adv_multi_agent.industrial.skills" = ["templates/*.md"]
"adv_multi_agent.healthcare.skills" = ["templates/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["google.*", "boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true
